arkts_static_test/04_Names_Declarations_Scopes/ets_cases/4.7.1_Signatures/compile-fail/NAM_04_07_01_100_FAIL_RETURN_TYPE_MISMATCH.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id NAM_04_07_01_100_FAIL_RETURN_TYPE_MISMATCH
 * @expect compile-fail
 * @section 4.7.1
 * @design 函数签名返回类型与实现不匹配
 * @note 反向用例：返回类型不一致时应报错
 */
function foo(): int { return "string"; }
